Modified vexpa js for global abatement

--- a/Source/Vexpa/test.html
+++ b/Source/Vexpa/test.html
@@ -10,7 +10,7 @@
 	</div>
 	<div id="vexput">
 		Render:
-		<input id="vexpa" type="text" onkeyup="render()"/>
+		<input id="vexpa" type="text" onkeyup="vexpa.render()"/>
 	</div>
 </body>
 </html>
