Minor fix, update Podfile

--- a/Source/MusicNotation.bundle/test.html
+++ b/Source/MusicNotation.bundle/test.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>	
-	<script type="text/javascript" src="lib/vexflow-min.js"></script>	
-	<script type="text/javascript" src="src/vexpa.js"></script>
+	<script type="text/javascript" src="jquery-2.1.0.min.js"></script>
+	<script type="text/javascript" src="vexflow-min.js"></script>
+	<script type="text/javascript" src="vexpa.js"></script>
 </head>
 <body>
 	<div id="canvas">
